<resources>
    <string name="app_name">UR Dashboard</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="share_app">Share App</string>
    <string name="invitation_title">UR Dashboards Invitation</string>
    <string name="invitation_message">UR Dashboards Dashboard Consolidated</string>
    <string name="invitation_custom_image">https://placehold.it/1000x1000</string>
    <string name="invitation_cta">Install Now!</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="line_one">%1$d reviews completed with an average time of %2$d hours, %3$d minutes and %4$d seconds per review</string>
    <string name="line_two">Earned $%1$s with an average of $%2$.2f per review</string>
    <string name="your_reviews">Your Reviews</string>
    <string name="your_revenue">Your Revenue</string>
    <string name="completed_detail">Reviewed on %1$s, you took %2$d hours, %3$d minutes and %4$d seconds. You earned $%5$s!</string>
    <string name="feedback_detail">Feedback from student: %1$s</string>
    <string name="reset_message">This will reset the app. You will no longer receive notifications. You will have to register the device and rerun the python script again. Continue?</string>
    <string name="inactive_submission_requests">No active submission requests</string>
    <string name="queue_text">You are at position %1$d for %2$s</string>

    <string name="pref_fcm_token" translatable="false">key_fcm_token</string>
    <string name="pref_udacity_token" translatable="false">key_udacity_token</string>
    <string name="pref_name" translatable="false">key_name</string>
    <string name="pref_role" translatable="false">key_role</string>
    <string name="pref_reset" translatable="false">key_reset</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="invalid_udacity_token">Invalid Udacity Review API Token</string>
    <plurals name="your_queue_position">
        <item quantity="one">Your position in queue</item>
        <item quantity="other">Your position in queues</item>
    </plurals>
    <plurals name="assigned_review">
        <item quantity="one">Right now, you have %d review assigned</item>
        <item quantity="other">Right now, you have %d reviews assigned</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <string name="scan_qr">Scan QR</string>
    <string name="onboarding_text_name">Hi %1$s</string>
    <string name="onboarding_text">Please wait while the your dashboard is getting ready</string>
    <string name="onboarding_text_complete">Your dashboard is ready</string>
    <string name="goto_dashboard">Goto Dashboard</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_revenue">Earnings</string>
    <string name="nav_queue">Queue</string>
    <string name="nav_me">Me</string>
    <string name="feedback">Feedback</string>
    <string name="swipe_up_feedback">Swipe up to view feedback</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="today_s_earnings">Today\'s earnings</string>
    <string name="this_month_s_earnings">This month\'s earnings</string>
    <string name="customise_earning_report">Customise earning report</string>
    <string name="calculate_earnings">Calculate Earnings</string>
    <string name="setup_intro">Udacity Reviews API key is required for this app to work</string>
    <string name="setup_visit">Visit https://urconnect.kartikarora.me on your PC to get started</string>
    <string name="please_wait">Please wait...</string>
    <string name="qr_instruction">Position the QR code anywhere in the viewfinder</string>
    <string name="preferences">Preferences</string>
    <string name="reviews_and_feedback">My Reviews and Feedback</string>
    <string name="reviews">Reviews</string>
    <string name="pref_type">type</string>
    <string name="your_stats">Your Stats</string>
    <string name="assigned_line">%1$s submission assigned which pays $%2$.2f. You have %3$s and %4$s remaining to complete the review.</string>
    <string name="unassign_submission">Unassign Submission</string>
    <string name="unassgined_success">%1$s unassigned</string>


</resources>
