<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_stats"
            android:checked="false"
            android:icon="@drawable/ic_assignment"
            android:title="@string/nav_stats" />

        <item
            android:id="@+id/nav_revenue"
            android:checked="false"
            android:icon="@drawable/ic_money"
            android:title="@string/nav_revenue" />

        <item
            android:id="@+id/nav_queue"
            android:checked="false"
            android:icon="@drawable/ic_queue"
            android:title="@string/nav_queue" />
        <item
            android:id="@+id/nav_me"
            android:checked="false"
            android:icon="@drawable/ic_account"
            android:title="@string/nav_me" />
    </group>
</menu>