<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/revenue_scroller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:scrollbars="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".fragments.RevenueFragment">

        <android.support.v7.widget.CardView
            android:id="@+id/today_report_card"
            style="@style/CustomCardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/today_report_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/today_s_earnings"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textSize="32sp"
                    android:textStyle="italic" />

                <ProgressBar
                    android:id="@+id/today_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/today_report_title" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/today_stats_line_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/primary"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/today_report_title"
                    tools:text="Line 1" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/today_stats_line_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/primary"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/today_stats_line_one"
                    tools:text="Line 2" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/this_month_report_card"
            style="@style/CustomCardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/today_report_card">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/month_report_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/this_month_s_earnings"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textSize="32sp"
                    android:textStyle="italic" />

                <ProgressBar
                    android:id="@+id/month_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/month_report_title" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/month_stats_line_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/primary"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/month_report_title"
                    tools:text="Line 1" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/month_stats_line_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/primary"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/month_stats_line_one"
                    tools:text="Line 2" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/custom_report_card"
            style="@style/CustomCardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/this_month_report_card">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/custom_report_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customise_earning_report"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textSize="32sp"
                    android:textStyle="italic" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/start_date_text_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    app:hintTextAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    app:layout_constraintEnd_toStartOf="@+id/end_date_text_input_layout"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/custom_report_title">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/primary"
                        android:focusable="false"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/start_date"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/primary"
                        android:textColorHint="@color/primary" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/end_date_text_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginTop="8dp"
                    app:hintTextAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/start_date_text_input_layout"
                    app:layout_constraintTop_toBottomOf="@id/custom_report_title">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:backgroundTint="@color/primary"
                        android:focusable="false"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="end"
                        android:hint="@string/end_date"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/primary"
                        android:textColorHint="@color/primary" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/calculate_revenue_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:enabled="false"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/calculate_earnings"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@drawable/button_color_selector_light"
                    android:theme="@style/ButtonLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/start_date_text_input_layout" />

                <ProgressBar
                    android:id="@+id/custom_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/calculate_revenue_button" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/custom_stats_line_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/primary"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/calculate_revenue_button"
                    tools:text="Line 1" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/custom_stats_line_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/primary"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/custom_stats_line_one"
                    tools:text="Line 2" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>